implement article on main

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
 body{
     font-size: 22px;
 }
+/* ul disc reset */
+ul{
+    padding-left:1em;
+}
 /* --------------------------- HEADER ---------------------------- */
 #main-header{
     height:6.5em;
@@ -23,13 +27,10 @@ body{
 
 /* --------------------------- MAIN ---------------------------- */
 main{
-    padding: 1.2rem 0 0.7em 0.4em;
-}
-ul.unordered-list{
-    list-style-type: disc !important;
+    padding: 1.2rem 0.4em 0.7em 0.4em;
 }
 
-/* article's header */
+/* text style */
 article .title{
     font-size: 2.4em;
 }
@@ -44,14 +45,37 @@ article .title{
     text-decoration: none;
     color:#00abe3;
 }
-
-.margin-bottom{
-    margin-bottom: 1.7rem;
-}
 .highlighted{
     background-color:yellow;
 }
-/* aricle's img section */
+
+/* margin */
+.margin-bottom{
+    margin-bottom: 1.7rem;
+}
+
+/* img */
 .img-size{
     height:22.5em;
+}
+
+/* table */
+table{
+    border-collapse: collapse;
+}
+tbody > tr:nth-child(odd){
+    background-color: #a7e9ff;
+}
+th{
+    text-align: start;
+}
+td{
+    min-width: 15em;
+}
+.bg-blue1{
+    background-color: #00abe3;
+    color:white;
+}
+.bg-blue2{
+    background-color: #00abe3;
 }
